--- a/custom.css
+++ b/custom.css
@@ -147,7 +147,7 @@
 }
 
 .investment-modal-content {
-  background: #111;
+  background: #0b1726 !important;
   color: #fff;
   width: 90%;
   max-width: 400px;
