--- a/custom.css
+++ b/custom.css
@@ -178,7 +178,7 @@
 
 .tab-btn {
   flex: 1 1 calc(50% - 8px);
-  background: #333;
+  background: #06101d !important;
   color: #fff;
   border: none;
   padding: 10px;
