--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,7 @@
+body {
+    padding: 0px !important;
+}
+
 #banners-wrapper .container.d-flex.flex-column {
   display: grid !important;
   grid-gap: 15px !important;
@@ -229,3 +233,5 @@
     transition: transform .4s ease-in-out, opacity .4s ease-in-out, box-shadow .4s ease-in-out;
     width: 100% !important;
 }
+
+
